--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   dio: ^5.0.0
   fpdart: ^0.4.0
-
+  flutter_bloc: ^8.1.2
+  collection: ^1.17.0
 
   cupertino_icons: ^1.0.2
 
