--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   fpdart: ^0.4.0
   flutter_bloc: ^8.1.2
   collection: ^1.17.0
+  google_fonts: ^4.0.3
 
   cupertino_icons: ^1.0.2
 
