--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_bloc: ^8.1.2
   collection: ^1.17.0
   google_fonts: ^4.0.3
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  path_provider: ^2.0.12
 
   cupertino_icons: ^1.0.2
 
@@ -29,6 +32,7 @@ dev_dependencies:
   retrofit_generator: ^5.0.0
   freezed: ^2.2.1
   json_serializable: ^6.5.4
+  hive_generator: ^2.0.0
 
   flutter_lints: ^2.0.0
 
