--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.0.12
   intl: ^0.18.0
+  equatable: ^2.0.5
 
   cupertino_icons: ^1.0.2
 
@@ -34,6 +35,8 @@ dev_dependencies:
   freezed: ^2.2.1
   json_serializable: ^6.5.4
   hive_generator: ^2.0.0
+  bloc_test: ^9.1.1
+  mockito: ^5.3.2
 
   flutter_lints: ^2.0.0
 
